--- a/share-point/src/App.css
+++ b/share-point/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;500;700&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .App {
   text-align: center;
 }
@@ -70,6 +72,27 @@
 
 button.gm-ui-hover-effect {
   visibility: hidden;
+}
+
+.ant-input {
+  border-color: #8295af;
+  box-shadow: none;
+  padding: 6px 4px 6px 16px;
+}
+
+.ant-input:focus {
+  border-color: #0087b7;
+  box-shadow: inset 0 0 0 1px #0087b7;
+}
+
+.sitewise-rect-primary-button {
+  border-color: #0087b7;
+  background-color: #0087b7;
+  min-width: 80px;
+  height: 32px;
+  font-weight: 500;
+  box-shadow: none;
+  border-radius: 4px;
 }
 
 
