--- a/share-point/src/App.css
+++ b/share-point/src/App.css
@@ -55,6 +55,24 @@
   cursor: pointer;
 }
 
+.loadingLogo {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.loading-page {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background: linear-gradient(202.32deg, rgb(3, 40, 105) 9.68%, rgba(2, 35, 92, 0.71) 61.13%, rgba(2, 30, 79, 0.45) 88.43%);
+  z-index: 9999;
+}
+
 /*.gm-style-iw.gm-style-iw-c {*/
 /*  width: 280px;*/
 /*  min-height: 60px;*/
