Styling issues #7 info-box border Radious set and hover button color change

--- a/src/App.css
+++ b/src/App.css
@@ -274,3 +274,10 @@ button.gm-ui-hover-effect {
   border-style: none;
 }
 
+.gm-style-iw-c {
+border-radius: 4px !important;
+}
+:where(.css-dev-only-do-not-override-dkbvqv).ant-btn-primary:hover {
+  color: #fff;
+  background: #0087B7 !important;
+}
