--- a/src/App.css
+++ b/src/App.css
@@ -156,12 +156,12 @@ button.gm-ui-hover-effect {
   border-radius: 0px;
 }
 
-.sitewise-info-details-button:where(.css-dev-only-do-not-override-2rgkd4).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover {
+.sitewise-info-details-button:hover {
   background-color: #0087b7;
   color: #fff;
 }
 
-.sitewise-info-remove-details-button:where(.css-dev-only-do-not-override-2rgkd4).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover {
+.sitewise-info-remove-details-button:hover {
   background-color: #FFFFFF;
   color: #0087b7;
 }
