--- a/src/App.css
+++ b/src/App.css
@@ -290,11 +290,16 @@ border-radius: 4px !important;
   .selectOnTheMap{
     display: none;
   }
-}
 
-@media only screen and (max-width: 768px) {
   .layerContainer{
     height: 100vh !important;
-    max-height: 78vh !important;
+    max-height: 79vh !important;
+  }
+}
+
+@media only screen and (max-width: 834px) {
+  .layerContainer{
+    height: 79vh ;
+    max-height: 60vh ;
   }
 }
