Hide select on map point in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -329,7 +329,7 @@ button.gm-ui-hover-effect {
   }
 
   .selectOnTheMap {
-    display: none;
+    display: none !important;
   }
 
   .headerImage {
